<resources>
    <string name="app_name">Moda Circular RA</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="username">Email</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repite la contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrar cuenta</string>
    <string name="change_psw">Cambiar contraseña</string>
    <string name="text_psw">Te enviaremos un email para que puedas cambiar tu contraseña.</string>
    <string name="text_logo">Logo</string>
    <string name="text_name">Nombre del proyecto</string>
    <string name="like_button">Botón de me gusta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">614644724724372</string>
</resources>
