<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.ChangePswActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/text_logo"
            android:src="@drawable/logo" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:contentDescription="@string/text_name"
            android:src="@drawable/texto" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_psw"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/text_input"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_psw"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/change_psw"
            android:textAllCaps="false"
            android:textColor="@drawable/text_color"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>