<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:src="@drawable/texto" />


        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_input"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@drawable/text_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/change_psw"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="¿Olvidaste tu contraseña? Obtén ayuda."
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/facebook"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/gmail"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/gmail"
                android:scaleType="fitCenter" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="¿No tienes cuenta? Regístrate."
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>