<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_profile_pic"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                app:cardCornerRadius="80dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_profile_pic" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/edit_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Editar foto"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/text_input"
                android:hint="@string/name"
                android:paddingHorizontal="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_input"
                android:hint="@string/lastname"
                android:paddingHorizontal="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_input"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/change_psw"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_input"
                android:hint="Nueva contraseña"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/confirm_psw"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_input"
                android:hint="Repite la nueva contraseña"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/dark_button"
            android:text="Guardar"
            android:textAllCaps="false"
            android:textColor="@drawable/text_color_profile"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/post_buttons"
            android:text="Cancelar"
            android:textAllCaps="false"
            android:textColor="@drawable/text_color_post"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_save"
            app:layout_constraintTop_toBottomOf="@id/form"
            app:layout_constraintWidth_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>